plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// 프로젝트에 필요한 라이브러리(의존성)를 정의합니다.
dependencies {
    // Spring Boot 웹 스타터
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot 웹소켓 스타터
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // for valid
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot 개발 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Spring Boot 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //h2 (개발용)
    runtimeOnly 'com.h2database:h2'

    //MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
    
    //nGinder
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
}

tasks.named('test') {
    useJUnitPlatform()

    testLogging {
        showStandardStreams = true  // System.out.println 출력 허용
        events "passed", "skipped", "failed" // 테스트 통과/실패 여부도 로그에 찍힘
    }
}

// Spring Boot 애플리케이션 JVM 설정 (ZGC + GC 로그)
bootRun {
    jvmArgs = [
        '-Xmx2g',
        '-Xms2g',
        '-XX:+UseZGC',
        '-XX:+ZGenerational',
        // '-Xlog:gc*:file=gc.log:time,uptime,level,tags:filecount=5,filesize=10m', # gc.log 파일 생성
        '-XX:+HeapDumpOnOutOfMemoryError'
    ]
}
